2008-11-04  Simon Kallweit  <simon.kallweit@intefo.ch>

	* include/hal_intr.h:
	Fixed base address in reset function.

2008-10-16  Nick Garnett  <nickg@ecoscentric.com>

	* src/vectors.S: 
	* src/hal_misc.c: Tidy some comments and code.

2008-10-10  Nick Garnett  <nickg@ecoscentric.com>

	* src/hal_misc.c (hal_deliver_interrupt): Add support for chained
	interrupts.
	(hal_interrupt_end): Only increment scheduler lock when the kernel
	is present.

	* include/hal_arch.h (HAL_THREAD_INIT_CONTEXT): Add end-stop to
	new thread states to terminate GDB backtraces.

2008-10-06  Nick Garnett  <nickg@ecoscentric.com>

	* hal_cortexm.cdl:
	* include/basetype.h:
	* include/hal_arch.h:
	* include/hal_intr.h:
	* include/hal_io.h:
	* include/cortex_stub.h:
	* src/vectors.S:
	* src/context.S:
	* src/cortexm.ld:
	* src/cortexm_stub.c:
	* src/hal_misc.c:
	New package -- Cortex-M architecture HAL.

//===========================================================================
//####ECOSGPLCOPYRIGHTBEGIN####
// -------------------------------------------
// This file is part of eCos, the Embedded Configurable Operating System.
// Copyright (C) 2008 eCosCentric Limited
//
// eCos is free software; you can redistribute it and/or modify it under
// the terms of the GNU General Public License as published by the Free
// Software Foundation; either version 2 or (at your option) any later version.
//
// eCos is distributed in the hope that it will be useful, but WITHOUT ANY
// WARRANTY; without even the implied warranty of MERCHANTABILITY or
// FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License
// for more details.
//
// You should have received a copy of the GNU General Public License along
// with eCos; if not, write to the Free Software Foundation, Inc.,
// 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA.
//
// As a special exception, if other files instantiate templates or use macros
// or inline functions from this file, or you compile this file and link it