@@ -1,6 +1,13 @@
 2008-11-04  Simon Kallweit  <simon.kallweit@intefo.ch>
 
 	* include/hal_intr.h:
+	Fixed load value of SysTick counter.
+	* src/hal_misc.c:
+	Fixed wrap-around in hal_delay_us().
+
+2008-11-04  Simon Kallweit  <simon.kallweit@intefo.ch>
+
+	* include/hal_intr.h:
 	Fixed base address in reset function.
 
 2008-10-16  Nick Garnett  <nickg@ecoscentric.com>
